@@ -34,7 +34,8 @@ Print the command line options.
 
 .TP
 \fB\-i SYNTAX\fR
-Read input in SYNTAX (turtle/ntriples/trig/nquads).
+Read input as SYNTAX.
+Valid values (case-insensitive): turtle, ntriples, trig, nquads.
 
 .TP
 \fB\-l\fR
@@ -42,7 +43,8 @@ Lax (non-strict) parsing.
 
 .TP
 \fB\-o SYNTAX\fR
-Write output in SYNTAX (turtle/ntriples/nquads).
+Write output as SYNTAX.
+Valid values (case-insensitive): turtle, ntriples, trig, nquads.
 
 .TP
 \fB\-p PREFIX\fR
