@@ -1,5 +1,6 @@
 serd (0.29.3) unstable;
 
+  * Make serdi syntax options case-insensitive
   * Add basic error tolerant parsing for line-based formats
   * Support strict parsing of prefixed names
   * Report errors for all failing test cases
@@ -7,7 +8,7 @@ serd (0.29.3) unstable;
   * Add NTriples test suite
   * Fix building with MSVC
 
- -- David Robillard <d@drobilla.net>  Sat, 23 Sep 2017 20:33:19 +0200
+ -- David Robillard <d@drobilla.net>  Sun, 24 Sep 2017 16:34:20 +0200
 
 serd (0.28.0) stable;
 
